--- a/public/css/style.css
+++ b/public/css/style.css
@@ -257,16 +257,16 @@ p {
     position: relative;
     padding: 20px;
     text-align: center;
-    justify-items: center;
-    border: 5px solid rgba(114, 186, 94, 0.35);
+    /* justify-items: center; */
+    /* border: 5px solid rgba(114, 186, 94, 0.35); */
 }
 
 .page-container {
     
-    background: rgba(255, 213, 70, 0.4);
-    border: 5px solid rgba(236, 198, 48, 0.5);
+    background-color:rgba(72,72,72,0.4);
+    /* border: 5px solid rgba(236, 198, 48, 0.5); */
     margin: auto;
-    max-width: 70%;
+    max-width: 50%;
 }
 
 h1 {
@@ -307,12 +307,12 @@ h1 {
 .dropdown-content {
     display: none;
     /* position: absolute; */
-    position: fixed;
+    /* position: fixed;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 3;
-}
+} */
 
 .dropdown-content a {
     color: black;
