--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,50 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-    {{> head}}
+{{!-- <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Contact Us</title>
+</head> --}}
+{{> head}}
+
 <body>
     {{> menu}}
-
-    <form method="POST" action="/confirmation">
+    <form>
         <h1> Have a question? Contact us. </h1>
 
         <div class="page-container">
             <div class="contact-container">
-                <div class="child-div">
+                <!-- <div class="child-div">
                 <label for="name">Full Name</label>
                 <input id="name" name="name" type="text" />
+                </div> -->
+
+                <br>
+
+                <div class="child-div">
+                    <label for="email">Email Address</label>
+                    <input id="email" name="email" type="text" required />
                 </div>
 
                 <br>
 
                 <div class="child-div">
-                <label for="email">Email Address</label>
-                <input id="email" name="email" type="text" />
+                    <label for="subject">Subject</label>
+                    <input id="subject" name="subject" type="text" required />
                 </div>
 
                 <br>
-
+                <!-- 
                 <div class="child-div">
-                <label for="phone number" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">Phone Number</label>
-                <input id="phone number" name="phone number" type="text" />
-                </div>
-            
+                <label for="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">Phone Number</label>
+                <input id="phone" name="phone" type="text" />
+                </div> -->
+
                 <br>
 
-                <div class="child-div">
+                <!-- <div class="child-div">
                 <label for="issue">What is your issue?</label>
                 <select id="issue" name="issue">
                     <option value="1"> General question</option>
                     <option value="2"> Other question</option>
                     <option value="3"> Miscellaneous</option>
                 </select>
-                </div>
+                </div> -->
 
-                <br><br>
+
 
                 <div class="child-div">
 
-                <label for="text">Type your inquiry</label>
-                <textarea id="text" name="text" rows="5" cols="70"></textarea>
+                    <label for="text">Type your inquiry</label>
+                    <textarea id="text" name="text" rows="5" cols="70" required></textarea>
 
                 </div>
 
@@ -53,10 +66,15 @@
                 <p><input type="submit"></p>
             </div>
         </div>
-    
+
     </form>
+
 
 
 </body>
 {{> footer}}
+
 </html>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/static/js/contact.js"></script>
