--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -2,76 +2,81 @@
 <html lang="en">
 
 {{> head}}
+
+
 <body>
-{{> menu}}
-<div class="container">
-<form method="post" action="/registerUser">
-    <h1>{{heading}}</h1>
-    <p><i>Please fill in the following fields.</i></p>
-    <p><i>A * denotes required information.</i></p>
+    {{> menu}}
+    <div class="container">
+        <form method="post" action="/registerUser">
+            <h1>{{heading}}</h1>
+            <p><i>Please fill in the following fields.</i></p>
+            <p><i>A * denotes required information.</i></p>
 
-    <p><label for="email"><b>Email Address *</b></label></p>
-    <input type="email" name="email" required>
+            <p><label for="email"><b>Email Address *</b></label></p>
+            <input type="email" name="email" required>
 
-    <p><label for="password"><b>Password *</b></label></p>
-    <input type="password" name="password" minlength=6 required>
+            <p><label for="password"><b>Password *</b></label></p>
+            <input type="password" name="password" minlength=6 required>
 
-    <p><label for="confirmPassword"><b>Confirm Password*</b></label></p>
-    <input type="password" name="confirmPassword" minlength=6 required>    
+            <p><label for="confirmPassword"><b>Confirm Password*</b></label></p>
+            <input type="password" name="confirmPassword" minlength=6 required>
 
-    <p><label for="title"><b>Title</b></label></p>
-    <input type="text" name="title">
+            <p><label for="title"><b>Title</b></label></p>
+            <input type="text" name="title">
 
-    <p><label for="firstName"><b>First Name *</b></label></p>
-    <input type="text" name="firstName" required>
+            <p><label for="firstName"><b>First Name *</b></label></p>
+            <input type="text" name="firstName" required>
 
-    <p><label for="lastName"><b>Last Name *</b></label></p>
-    <input type="text" name="lastName" required>
+            <p><label for="lastName"><b>Last Name *</b></label></p>
+            <input type="text" name="lastName" required>
 
-    <p><label for="companyName"><b>Company Name *</b></label></p>
-    <input type="text" name="companyName" required>
+            <p><label for="companyName"><b>Company Name *</b></label></p>
+            <input type="text" name="companyName" required>
 
-    <p><label for="division"><b>Division</b></label></p>
-    <input type="text" name="division">
+            <p><label for="division"><b>Division</b></label></p>
+            <input type="text" name="division">
 
-    <p><b>Plant Classification</b></p>
-    <select name="plantClassification">
-        <option disabled selected value="null_value">select your plant classification</option>
-        <option value="na">N/A</option>
-        <option value="first">1st Class</option>
-        <option value="second">2nd Class</option>
-        <option value="third">3rd Class</option>
-        <option value="fourth">4th Class</option>  
-        <option value="fifth">5th Class</option>
-        <option value="rpo">RPO</option>
-    </select>
+            <p><b>Plant Classification</b></p>
+            <select name="plantClassification">
+                <option disabled selected value="null_value">select your plant classification</option>
+                <option value="na">N/A</option>
+                <option value="first">1st Class</option>
+                <option value="second">2nd Class</option>
+                <option value="third">3rd Class</option>
+                <option value="fourth">4th Class</option>
+                <option value="fifth">5th Class</option>
+                <option value="rpo">RPO</option>
+            </select>
 
-    <p><label for="fieldPosition"><b>Field Position</b></label></p>
-    <select name="fieldPosition">
-        <option disabled selected value="null_value">select your position</option>
-        <option value="na">N/A</option>
-        <option value="chiefEngineer">Chief Engineer</option>
-        <option value="shiftEngineer">Shift Engineer</option>
-        <option value="operator">Operator</option>
-    </select>
+            <p><label for="fieldPosition"><b>Field Position</b></label></p>
+            <select name="fieldPosition">
+                <option disabled selected value="null_value">select your position</option>
+                <option value="na">N/A</option>
+                <option value="chiefEngineer">Chief Engineer</option>
+                <option value="shiftEngineer">Shift Engineer</option>
+                <option value="operator">Operator</option>
+            </select>
 
-    <p><label for="businessPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Business Phone Number</b> (format: 123-456-7890)</label></p>
-    <input type="tel" name="businessPhone">
+            <p><label for="businessPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Business Phone Number</b> (format:
+                    123-456-7890)</label></p>
+            <input type="tel" name="businessPhone">
 
-    <p><label for="homePhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Home phone Number</b> (format: 123-456-7890)</label></p>
-    <input type="tel" name="homePhone">
+            <p><label for="homePhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Home phone Number</b> (format:
+                    123-456-7890)</label></p>
+            <input type="tel" name="homePhone">
 
-    <p><label for="cellPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Cellular Phone Number</b> (format: 123-456-7890)</label></p>
-    <input type="tel" name="cellPhone">
+            <p><label for="cellPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Cellular Phone Number</b> (format:
+                    123-456-7890)</label></p>
+            <input type="tel" name="cellPhone">
 
-    <p><label for="address"><b>House Address</b></label></p>
-    <input type="text" name="addressL1" placeholder="Street and number">
-    <input type="text" name="addressL2" placeholder="Apartment, suite, unit, building, floor, etc.">
+            <p><label for="address"><b>House Address</b></label></p>
+            <input type="text" name="addressL1" placeholder="Street and number">
+            <input type="text" name="addressL2" placeholder="Apartment, suite, unit, building, floor, etc.">
 
-    <p><label for="City"><b>City</b></label></p>
-    <input type="text" name="city">
+            <p><label for="City"><b>City</b></label></p>
+            <input type="text" name="city">
 
-    <p><b>Country</b></p>
+            {{!-- <p><b>Country</b></p>
     <select name="country">
         <option disabled selected value="null_value">select your country</option>
         <option value="Canada">Canada</option>
@@ -94,22 +99,44 @@
         <option value="Yukon">Yukon</option>
         <option value="Northwest Territories">Northwest Territories</option>
         <option value="Nunavut">Nunavut</option>
-    </select>
+    </select> --}}
 
-    <p><label for="pc_zip"><b>Postal Code</b></label></p>
-    <input type="text" name="pc_zip">
 
-    <br><br>
 
-    <input type="checkbox" name="consent" value="consent"> I consent to distribution of my contact information for networking purposes
+            <p><b>Country</b></p>
+            <select name="country" class="country">
+                <option disabled selected value="null_value">select your country</option>
+                <option value="Canada">Canada</option>
+                <option value="United_States">United States</option>
+            </select>
+            <br>
+            <p><b>Province/Territory</b></p>
+            <select name="provincestate" class="provincestate">
+                <option disabled selected value="null_value">select your province</option>
+                <option value="BC">British Columbia</option>
+                <option value="Ontario">Ontario</option>
+            </select>
+            <br />
 
-    <br><br>
+            <p><label for="pc_zip"><b>Postal Code</b></label></p>
+            <input type="text" name="pc_zip">
 
-    <p><input type="submit"></p>
-</form>
-</div>
+            <br><br>
+
+            <input type="checkbox" name="consent" value="consent"> I consent to distribution of my contact information
+            for networking purposes
+
+            <br><br>
+
+            <p><input type="submit"></p>
+        </form>
+    </div>
 
 </body>
 
 {{> footer}}
+
 </html>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/static/js/registration.js"></script>
